[package]
name = "re-api-consume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"]}
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.103"
tokio = { version ="1.28.2", features = ["full"] }
